@@ -1,3 +1,8 @@
+2012-01-31  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: Fixed some more issues with (E)AC3 being
+	misdtected as AVC elementary streams.
+
 2012-01-27  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mmg: bug fix: The header editor was sometimes creating two
